# tap-greenhouse

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  meltano.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: build.yml  test.yml  update_catalog.yml
scripts/: connect.py  update_catalog.py
tap_greenhouse/: __init__.py  __main__.py  client.py  streams.py  streams.toml  tap.py
tap_greenhouse/schemas/: application_stages.json  applications.json  applied_candidate_tags.json  approval_flows.json  approver_groups.json  approvers.json  attachments.json  blocked_spam_sources.json  bulk_requests.json  candidate_attribute_types.json  candidate_educations.json  candidate_employments.json  candidate_tags.json  candidates.json  close_reasons.json  custom_field_departments.json  custom_field_offices.json  custom_field_options.json  custom_fields.json  default_interviewers.json  demographic_answer_options.json  demographic_answers.json  demographic_question_sets.json  demographic_questions.json  departments.json  eeoc.json  focus_candidate_attributes.json  future_job_permissions.json  interview_kits.json  interviewer_tags.json  interviewers.json  interviews.json  job_board_custom_locations.json  job_candidate_attributes.json  job_hiring_managers.json  job_interview_stages.json  job_interviews.json  job_notes.json  job_owners.json  job_post_locations.json  (+26 more)
tests/: test_core.py
